@@ -1,5 +1,10 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+pts-core: Ubuntu 21.04 dependency updates
+phodevi: Intel Linux graphics string reporting improvement
+
 Phoronix Test Suite 10.4.0 Milestone 1
 17 March 2021
 
